[gd_scene load_steps=20 format=2]

[ext_resource path="res://Fontes/Poppins/Poppins-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/telaInicial.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Inicial/nome.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Tiles/GramaVerde.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Tiles/GramaAmarela.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Personagem/Idle/idleII.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Cair de cima no personagem pra tirar dano/peças.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Nuvens/nuvensMenu.png" type="Texture" id=8]

[sub_resource type="Animation" id=10]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 32, 48 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.960784, 0.960784, 0.960784, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.960784, 0.960784, 0.960784, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.807843, 0.807843, 0.807843, 1 )

[sub_resource type="Theme" id=7]
Button/styles/disabled = SubResource( 2 )
Button/styles/focus = SubResource( 8 )
Button/styles/hover = SubResource( 4 )
Button/styles/normal = SubResource( 5 )
Button/styles/pressed = SubResource( 6 )

[sub_resource type="DynamicFont" id=1]
size = 34
font_data = ExtResource( 1 )

[sub_resource type="TileSet" id=13]
0/name = "GramaAmarela.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "GramaVerde.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "ParteMarrom"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 32, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "peças.png 3"
3/texture = ExtResource( 7 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "peças.png 4"
4/texture = ExtResource( 7 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 32, 0, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "peças.png 5"
5/texture = ExtResource( 7 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 64, 0, 32, 32 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "peças.png 6"
6/texture = ExtResource( 7 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 64, 0, 64, 32 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0

[node name="telaInicial" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="bg" type="Node2D" parent="."]

[node name="ceu" type="Sprite" parent="bg"]
position = Vector2( 512, 304 )
scale = Vector2( 4, 4.22222 )
texture = ExtResource( 8 )

[node name="ColorRect" type="ColorRect" parent="bg"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.576471 )

[node name="nome do jogo" type="Sprite" parent="bg"]
position = Vector2( 575.5, 267.344 )
scale = Vector2( 0.590104, 0.590104 )
texture = ExtResource( 3 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 928, 469 )

[node name="Sprite" type="Sprite" parent="Player"]
scale = Vector2( 1.80612, 1.80612 )
texture = ExtResource( 6 )
flip_h = true
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
autoplay = "Idle"
anims/Idle = SubResource( 10 )
anims/RESET = SubResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 0, -6 )
shape = SubResource( 12 )

[node name="controle" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = -293.0
margin_right = 284.0
margin_bottom = -45.0

[node name="NovoJogo" type="Button" parent="controle"]
margin_right = 184.0
margin_bottom = 48.0
mouse_default_cursor_shape = 2
theme = SubResource( 7 )
custom_colors/font_color_focus = Color( 0.909804, 0.662745, 0.247059, 1 )
custom_colors/font_color = Color( 0.945098, 0.921569, 0.878431, 1 )
custom_colors/font_color_hover = Color( 0.909804, 0.662745, 0.247059, 1 )
custom_colors/font_color_pressed = Color( 0.6, 0.27451, 0.054902, 1 )
custom_fonts/font = SubResource( 1 )
text = "Novo Jogo"

[node name="Continuar" type="Button" parent="controle"]
margin_top = 52.0
margin_right = 184.0
margin_bottom = 100.0
mouse_default_cursor_shape = 2
theme = SubResource( 7 )
custom_colors/font_color_focus = Color( 0.909804, 0.662745, 0.247059, 1 )
custom_colors/font_color = Color( 0.945098, 0.921569, 0.878431, 1 )
custom_colors/font_color_hover = Color( 0.909804, 0.662745, 0.247059, 1 )
custom_colors/font_color_pressed = Color( 0.6, 0.27451, 0.054902, 1 )
custom_fonts/font = SubResource( 1 )
text = "Continuar"
align = 0

[node name="Controles" type="Button" parent="controle"]
margin_top = 104.0
margin_right = 184.0
margin_bottom = 152.0
mouse_default_cursor_shape = 2
theme = SubResource( 7 )
custom_colors/font_color_focus = Color( 0.909804, 0.662745, 0.247059, 1 )
custom_colors/font_color = Color( 0.945098, 0.921569, 0.878431, 1 )
custom_colors/font_color_hover = Color( 0.909804, 0.662745, 0.247059, 1 )
custom_colors/font_color_pressed = Color( 0.6, 0.27451, 0.054902, 1 )
custom_fonts/font = SubResource( 1 )
text = "Controles"
align = 0

[node name="Sair" type="Button" parent="controle"]
margin_top = 156.0
margin_right = 184.0
margin_bottom = 204.0
mouse_default_cursor_shape = 2
theme = SubResource( 7 )
custom_colors/font_color_focus = Color( 0.909804, 0.662745, 0.247059, 1 )
custom_colors/font_color = Color( 0.945098, 0.921569, 0.878431, 1 )
custom_colors/font_color_hover = Color( 0.909804, 0.662745, 0.247059, 1 )
custom_colors/font_color_pressed = Color( 0.6, 0.27451, 0.054902, 1 )
custom_fonts/font = SubResource( 1 )
text = "Sair"
align = 0

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 13 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 3, 0, 1, 3, 0, 2, 3, 0, 3, 3, 0, 4, 3, 0, 5, 3, 0, 6, 3, 0, 7, 3, 0, 8, 3, 0, 9, 3, 0, 10, 3, 0, 11, 3, 0, 12, 3, 0, 13, 3, 0, 14, 3, 0, 15, 3, 0, 16, 3, 0, 17, 3, 0, 18, 3, 0, 19, 3, 0, 20, 3, 0, 21, 3, 0, 22, 3, 0, 23, 3, 0, 24, 3, 0, 25, 3, 0, 26, 3, 0, 27, 3, 0, 28, 3, 0, 29, 3, 0, 30, 3, 0, 31, 3, 0, 65536, 5, 0, 65567, 5, 0, 131072, 5, 0, 131103, 5, 0, 196608, 5, 0, 196639, 5, 0, 262144, 5, 0, 262175, 5, 0, 327680, 5, 0, 327711, 5, 0, 393216, 5, 0, 393247, 5, 0, 458752, 5, 0, 458783, 5, 0, 524288, 5, 0, 524319, 5, 0, 589824, 5, 0, 589855, 5, 0, 655360, 5, 0, 655391, 5, 0, 720896, 5, 0, 720927, 5, 0, 786432, 5, 0, 786463, 5, 0, 851968, 5, 0, 851999, 5, 0, 917504, 5, 0, 917535, 5, 0, 983040, 5, 0, 983071, 5, 0, 1048576, 1, 0, 1048577, 1, 0, 1048578, 1, 0, 1048579, 1, 0, 1048580, 1, 0, 1048581, 1, 0, 1048582, 1, 0, 1048583, 1, 0, 1048584, 1, 0, 1048585, 1, 0, 1048586, 1, 0, 1048587, 1, 0, 1048588, 1, 0, 1048589, 1, 0, 1048590, 1, 0, 1048591, 1, 0, 1048592, 0, 0, 1048593, 0, 0, 1048594, 0, 0, 1048595, 0, 0, 1048596, 0, 0, 1048597, 0, 0, 1048598, 0, 0, 1048599, 0, 0, 1048600, 0, 0, 1048601, 0, 0, 1048602, 0, 0, 1048603, 0, 0, 1048604, 0, 0, 1048605, 0, 0, 1048606, 0, 0, 1048607, 0, 0, 1114112, 2, 0, 1114113, 2, 0, 1114114, 2, 0, 1114115, 2, 0, 1114116, 2, 0, 1114117, 2, 0, 1114118, 2, 0, 1114119, 2, 0, 1114120, 2, 0, 1114121, 2, 0, 1114122, 2, 0, 1114123, 2, 0, 1114124, 2, 0, 1114125, 2, 0, 1114126, 2, 0, 1114127, 2, 0, 1114128, 2, 0, 1114129, 2, 0, 1114130, 2, 0, 1114131, 2, 0, 1114132, 2, 0, 1114133, 2, 0, 1114134, 2, 0, 1114135, 2, 0, 1114136, 2, 0, 1114137, 2, 0, 1114138, 2, 0, 1114139, 2, 0, 1114140, 2, 0, 1114141, 2, 0, 1114142, 2, 0, 1114143, 2, 0, 1179648, 2, 0, 1179649, 2, 0, 1179650, 2, 0, 1179651, 2, 0, 1179652, 2, 0, 1179653, 2, 0, 1179654, 2, 0, 1179655, 2, 0, 1179656, 2, 0, 1179657, 2, 0, 1179658, 2, 0, 1179659, 2, 0, 1179660, 2, 0, 1179661, 2, 0, 1179662, 2, 0, 1179663, 2, 0, 1179664, 2, 0, 1179665, 2, 0, 1179666, 2, 0, 1179667, 2, 0, 1179668, 2, 0, 1179669, 2, 0, 1179670, 2, 0, 1179671, 2, 0, 1179672, 2, 0, 1179673, 2, 0, 1179674, 2, 0, 1179675, 2, 0, 1179676, 2, 0, 1179677, 2, 0, 1179678, 2, 0, 1179679, 2, 0 )

[connection signal="pressed" from="controle/Continuar" to="." method="_on_Continuar_pressed"]
[connection signal="pressed" from="controle/Controles" to="." method="_on_Controles_pressed"]
[connection signal="pressed" from="controle/Sair" to="." method="_on_Sair_pressed"]
